refactor(file): 优化配置文件路径处理逻辑
- 修改了 SQLite 数据库连接 URL，使用相对路径
- 重构了 getConfigFilePath 方法，简化了配置文件路径的获取逻辑
- 移除了不必要的代码注释和未使用的函数